Fixed layout issue of review box on smaller screens

--- a/src/components/ReviewList/ReviewList.css
+++ b/src/components/ReviewList/ReviewList.css
@@ -1,13 +1,17 @@
+.review-list-wrapper {
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+    position: absolute;
+    top: 0;
+    width: 100vw;
+}
 .review-list {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    position: absolute;
-    top: 0;
-    left: 25%;
     width: 60%;
-    margin: 0 auto;
-    margin-top: 40px;
+    margin-top: -20px;
     padding-bottom: 20px;
     box-shadow: 10px 10px 30px 0px rgba(150,150,150,.5);
     border-radius: 5px;
